--- a/css/styles.css
+++ b/css/styles.css
@@ -278,10 +278,15 @@ p {
 
 .mega-menu .mega-menu__column {
 	min-width: 180px;
+	margin: 15px 0;
 }
 
 .mega-menu .mega-menu__list {
 	background-color: transparent;
+}
+
+.mb-2{
+	margin-bottom: 15px;
 }
 
 .mega-menu .mega-menu__list li a {
@@ -293,11 +298,12 @@ p {
 	background-color: transparent;
 }
 
-.mega-menu .mega-menu__list li a:hover {
+.mega-menu .mega-menu__list li a:not(.bx-icons):hover  {
 	background-color: #0dcaf0;
 	text-align: center;
 	color: #343a40;
 }
+
 
 .mega-menu .mega-menu__list li a.has-badge {
 	padding-right: 20px;
@@ -4292,8 +4298,246 @@ div.required .control-label:before {
     border-radius: 4px;
 }
 
+.delivery-footer{
+     height: 96px; 
+    padding: 0 60px;
+    background-color: rgb(239, 239, 239);
+}
+
 .ps-address_footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.checkout-panel {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .2);
+  margin: 35px 0;
+}
+
+.panel-body {
+  padding: 45px 50px 0;
+  flex: 1;
+}
+ 
+/*
+ 
+.step {
+  box-sizing: border-box;
+  position: relative;
+  z-index: 1;
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin-bottom: 30px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  background-color: #efefef;
+}
+ 
+.step:after {
+  position: absolute;
+  z-index: -1;
+  top: 5px;
+  left: 22px;
+  width: 225px;
+  height: 6px;
+  content: '';
+  background-color: #efefef;
+}
+ 
+.step:before {
+  color: #2e2e2e;
+  position: absolute;
+  top: 40px;
+}
+ 
+.step:last-child:after {
+  content: none;
+}
+ 
+.step.active {
+  background-color: #f62f5e;
+}
+.step.active:after {
+  background-color: #f62f5e;
+}
+.step.active:before {
+  color: #f62f5e;
+}
+.step.active + .step {
+  background-color: #f62f5e;
+}
+.step.active + .step:before {
+  color: #f62f5e;
+}
+ 
+.step:nth-child(1):before {
+  content: 'Delivery';
+}
+.step:nth-child(2):before {
+  right: -40px;
+  content: 'Confirmation';
+}
+.step:nth-child(3):before {
+  right: -30px;
+  content: 'Payment';
+}
+.step:nth-child(4):before {
+  right: 0;
+  content: 'Finish';
+}*/
+
+.payment-method {
+  display: flex;
+  margin-bottom: 20px;
+  justify-content: space-between;
+}
+ 
+.method {
+  display: flex;
+  flex-direction: column;
+  width: 382px;
+  height: 122px;
+  padding-top: 20px;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  background-color: rgb(249, 249, 249);
+  justify-content: center;
+  align-items: center;
+}
+ 
+.card-logos {
+  display: flex;
+  width: 150px;
+  justify-content: space-between;
+  align-items: center;
+}
+ 
+.radio-input {
+  margin-top: 20px;
+}
+ 
+input[type='radio'] {
+  display: inline-block;
+}
+
+.input-fields {
+  display: flex;
+  justify-content: space-between;
+}
+ 
+.input-fields label {
+  display: block;
+  margin-bottom: 10px;
+  color: #b4b4b4;
+}
+ 
+.input-fields .info {
+  font-size: 12px;
+  font-weight: 300;
+  display: block;
+  margin-top: 50px;
+  opacity: .5;
+  color: #2e2e2e;
+}
+ 
+.input-fields div[class*='column'] {
+  width: 382px;
+}
+ 
+.input-fields input[type='text'],
+.input-fields input[type='password'] {
+  font-size: 16px;
+  width: 100%;
+  height: 50px;
+  padding-right: 40px;
+  padding-left: 16px;
+  color: rgba(46, 46, 46, .8);
+  border: 1px solid rgb(225, 225, 225);
+  border-radius: 4px;
+  outline: none;
+}
+ 
+.input-fields input[type='text']:focus,
+.input-fields input[type='password']:focus {
+  border-color: rgb(119, 219, 119);
+}
+ 
+#date { background: url(images/icons/icons_calendar_black.png) no-repeat 95%; }
+#cardholder { background: url(images/icons/icons_person_black.png) no-repeat 95%; }
+#cardnumber { background: url(images/icons/icons_card_black.png) no-repeat 95%; }
+#verification { background: url(images/icons/icons_lock_black.png) no-repeat 95%; }
+ 
+.small-inputs {
+  display: flex;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+ 
+.small-inputs div {
+  width: 182px;
+}
+
+.panel-footer {
+  display: flex;
+  width: 100%;
+  height: 96px;
+  /*padding: 0 80px;*/
+  background-color: rgb(239, 239, 239);
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn {    
+	font-size: 16px;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+    border: none;
+    border-radius: 23px;
+} 
+
+.btn:focus {
+  outline: none;
+}
+ 
+.btn:hover {
+  transform: scale(1.1);
+}
+
+.blue-border {
+  border: 1px solid rgb(110, 178, 251);
+}
+
+.warning {
+  border-color: #f62f5e;
+}
+
+.bx-icons{
+    background: #fff;
+    padding: 20px !important;
+    height: 100px;
+    box-shadow: 1px 1px 1px 1px rgb(0 0 0 / 20%);    
+    transition: all .2s ease-in-out;
+}
+
+.bx-icons:hover{
+  background-color: #fff !important;
+  transform: scale(1.1);
+  text-align: justify;
+}
+
+.bx-icons i{
+	font-size: 30px;    
+	padding-left: 40px;
+    cursor: pointer;
+}
+
+.bx-icons p {
+	text-align: center;
 }
